--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
   <img src="https://placekitten.com/400/300" alt="サンプル画像" style="margin: 20px; border-radius: 10px;">
 
   <!-- 実験開始ボタン（リンク） -->
-  <p><a href="https://example.com/test" class="button">実験を開始する</a></p>
+  <a href="experiment.html" class="button">体験ページへ</a>
 </body>
 </html>
