--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <p>このページは実験用のサンプルです。</p>
 
   <!-- 画像 -->
-  <img src="https://placekitten.com/400/300" alt="サンプル画像" style="margin: 20px; border-radius: 10px;">
+  <img src="myimage.png" alt="自分の画像" style="margin: 20px; border-radius: 10px;">
 
   <!-- 実験開始ボタン（リンク） -->
   <a href="experiment.html" class="button">体験ページへ</a>
