--- a/exit.html
+++ b/exit.html
@@ -1,4 +1,9 @@
-<script>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>退店記録</title>
+  <script>
   window.onload = () => {
     const urlParams = new URLSearchParams(window.location.search);
     const tableId = urlParams.get('table');
@@ -10,3 +15,9 @@
     // 後に Firebase/Supabase へ送信する想定
   }
 </script>
+</head>
+<body>
+  <h1>ご利用ありがとうございます！</h1>
+  <p>ただいま退店が記録されました。</p>
+</body>
+</html>
