--- a/exit.html
+++ b/exit.html
@@ -15,8 +15,7 @@
     projectId: "qr-visitor-log",
     storageBucket: "qr-visitor-log.firebasestorage.app",
     messagingSenderId: "304250341939",
-    appId: "1:304250341939:web:b8d5b946590d1f852cf146",
-    measurementId: "G-K614HNZEV0"
+    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
   };
 
     const app = firebase.initializeApp(firebaseConfig);
