--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
     authDomain: "qr-visitor-log.firebaseapp.com",
     projectId: "qr-visitor-log",
-    storageBucket: "qr-visitor-log.firebasestorage.app",
+    storageBucket: "qr-visitor-log.appspot.com",
     messagingSenderId: "304250341939",
     appId: "1:304250341939:web:b8d5b946590d1f852cf146"
   };
