--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
-<!DOCTYPE html>
-<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <title>混雑状況</title>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js"></script>
+
+  <!-- ✅ 非モジュール対応のFirebase SDK（古いv9互換形式） -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
 
   <script>
     const firebaseConfig = {
-    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-    authDomain: "qr-visitor-log.firebaseapp.com",
-    projectId: "qr-visitor-log",
-    storageBucket: "qr-visitor-log.appspot.com",
-    messagingSenderId: "304250341939",
-    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-  };
+      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+      authDomain: "qr-visitor-log.firebaseapp.com",
+      projectId: "qr-visitor-log",
+      storageBucket: "qr-visitor-log.appspot.com",
+      messagingSenderId: "304250341939",
+      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+    };
 
-    const app = firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore(app);
+    // ✅ Firebase 初期化
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
 
     async function countVisitors() {
       try {
-        const logsSnapshot = await db.collection("logs").get();
+        const snapshot = await db.collection("logs").get();
+
         let entries = 0;
         let exits = 0;
 
-        logsSnapshot.forEach(doc => {
+        snapshot.forEach(doc => {
           const data = doc.data();
+          console.log("読み込んだデータ:", data);
+
           if (data.type === "enter") entries++;
           if (data.type === "exit") exits++;
         });
@@ -35,9 +39,9 @@
         document.getElementById("count").textContent = current;
         document.getElementById("entries").textContent = entries;
         document.getElementById("exits").textContent = exits;
-
       } catch (error) {
-        console.error("カウント取得エラー:", error);
+        console.error("読み取り失敗:", error);
+        document.getElementById("count").textContent = "エラー";
       }
     }
 
@@ -46,10 +50,3 @@
     };
   </script>
 </head>
-<body>
-  <h1>現在の混雑状況</h1>
-  <p>現在の入店者数: <strong id="count">読み込み中...</strong></p>
-  <p>累計入店数: <span id="entries">-</span></p>
-  <p>累計退店数: <span id="exits">-</span></p>
-</body>
-</html>
