--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <title>混雑状況</title>
@@ -50,3 +52,10 @@
     };
   </script>
 </head>
+  <body>
+  <h1>現在の混雑状況</h1>
+  <p>現在の入店者数: <strong id="count">読み込み中...</strong></p>
+  <p>累計入店数: <span id="entries">-</span></p>
+  <p>累計退店数: <span id="exits">-</span></p>
+</body>
+</html>
