--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
   <body>
   <h1>現在の混雑状況</h1>
-  <p>現在の入店者数: <strong id="count">読み込み中...</strong></p>
+  <p>現在の入店者数: <span id="count">読み込み中...</span></p>
   <p>累計入店数: <span id="entries">-</span></p>
   <p>累計退店数: <span id="exits">-</span></p>
 </body>
