--- a/exit.html
+++ b/exit.html
@@ -5,43 +5,42 @@
   <title>退店記録</title>
 
   <!-- Firebase SDK 読み込み -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js"></script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
-  <script>
-   const firebaseConfig = {
-    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-    authDomain: "qr-visitor-log.firebaseapp.com",
-    projectId: "qr-visitor-log",
-    storageBucket: "qr-visitor-log.appspot.com",
-    messagingSenderId: "304250341939",
-    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-  };
+    const firebaseConfig = {
+      apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
+      authDomain: "qr-visitor-log.firebaseapp.com",
+      projectId: "qr-visitor-log",
+      storageBucket: "qr-visitor-log.appspot.com",
+      messagingSenderId: "304250341939",
+      appId: "1:304250341939:web:b8d5b946590d1f852cf146"
+    };
 
-    const app = firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore(app);
-  </script>
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-  <!-- 退店記録処理 -->
-  <script>
-    window.onload = async () => {
+    window.addEventListener("load", async () => {
       const params = new URLSearchParams(window.location.search);
       const table = params.get("table") || "unknown";
       const timestamp = new Date().toISOString();
       const device = navigator.userAgent;
 
+      console.log("送信データ:", { type: "exit", table, timestamp, device });
+
       try {
-        await db.collection("logs").add({
+        await addDoc(collection(db, "logs"), {
           type: "exit",
-          table: table,
-          timestamp: timestamp,
-          device: device
+          table,
+          timestamp,
+          device
         });
-        console.log("退店記録完了");
+        console.log("✅ 退店記録完了");
       } catch (error) {
-        console.error("退店記録失敗:", error);
+        console.error("❌ 退店記録失敗:", error);
       }
-    };
+    });
   </script>
 </head>
 <body>
