--- a/enter.html
+++ b/enter.html
@@ -5,10 +5,10 @@
   <title>入店記録</title>
 
   <!-- Firebase SDK 読み込み -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js"></script>
 
+  <script>
     const firebaseConfig = {
       apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
       authDomain: "qr-visitor-log.firebaseapp.com",
@@ -18,29 +18,30 @@
       appId: "1:304250341939:web:b8d5b946590d1f852cf146"
     };
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+    const app = firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore(app);
+  </script>
 
-    window.addEventListener("load", async () => {
+  <!-- 入店記録処理 -->
+  <script>
+    window.onload = async () => {
       const params = new URLSearchParams(window.location.search);
       const table = params.get("table") || "unknown";
       const timestamp = new Date().toISOString();
       const device = navigator.userAgent;
 
-      console.log("送信データ:", { type: "entry", table, timestamp, device });
-
       try {
-        await addDoc(collection(db, "logs"), {
-          type: "entry",
-          table,
-          timestamp,
-          device
+        await db.collection("logs").add({
+          type: "enter",  // ← 統一
+          table: table,
+          timestamp: timestamp,
+          device: device
         });
-        console.log("✅ 入店記録完了");
+        console.log("入店記録完了");
       } catch (error) {
-        console.error("❌ 入店記録失敗:", error);
+        console.error("入店記録失敗:", error);
       }
-    });
+    };
   </script>
 </head>
 <body>
