--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
   </script>
 </head>
   <body>
+  <h1>現在の混雑状況</h1>
+  <p>現在の入店者数: <span id="count">読み込み中...</span></p>
+  <p>累計入店数: <span id="entries">-</span></p>
+  <p>累計退店数: <span id="exits">-</span></p>
+    
   <h1>現在のテーブル使用状況</h1>
   <p>テーブル1：<span id="table1-status">読み込み中...</span></p>
   <p>テーブル2：<span id="table2-status">読み込み中...</span></p>
