--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <script>
   function updateStatus2(count, elementId) {
     const status2 = count > 0 ? "使用中" : "空き";
-    document.getElementById(elementId).textContent = status;
+    document.getElementById2(elementId).textContent = status;
   }
 
   function countVisitorsByTable2(snapshot) {
