--- a/enter.html
+++ b/enter.html
@@ -3,6 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <title>入店記録</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Helvetica Neue', sans-serif;
+      color: #333;
+      text-align: center;
+    }
+
+    .container {
+      background-color: rgba(255, 255, 255, 0.85);
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    }
+
+    .icon {
+      font-size: 64px;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      font-size: 28px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 18px;
+    }
+  </style>
 
   <!-- Firebase SDK 読み込み -->
   <script type="module">
@@ -44,7 +79,10 @@
   </script>
 </head>
 <body>
-  <h1>ご来店ありがとうございます！</h1>
-  <p>入店が記録されました。</p>
+  <div class="container">
+    <div class="icon">🛍️</div>
+    <h1>ご来店ありがとうございます！</h1>
+    <p>入店が記録されました。</p>
+  </div>
 </body>
 </html>
