--- a/exit.html
+++ b/exit.html
@@ -3,6 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <title>退店記録</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      background: linear-gradient(to right, #f9f9f9, #e6f0ff);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Helvetica Neue', sans-serif;
+      color: #333;
+      text-align: center;
+    }
+
+    .container {
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 50px 30px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+      max-width: 600px;
+      width: 90%;
+    }
+
+    .thankyou-main {
+      font-size: 36px;
+      font-weight: bold;
+      color: #2c3e50;
+      margin-bottom: 10px;
+    }
+
+    .thankyou-sub {
+      font-size: 24px;
+      color: #2980b9;
+      margin-bottom: 30px;
+    }
+
+    .message {
+      font-size: 18px;
+      line-height: 1.8;
+      white-space: pre-line;
+    }
+  </style>
 
   <!-- Firebase SDK 読み込み -->
   <script type="module">
@@ -44,7 +86,15 @@
   </script>
 </head>
 <body>
-  <h1>ご利用ありがとうございました！</h1>
-  <p>退店が記録されました。</p>
+  <div class="container">
+    <div class="thankyou-main">THANK YOU</div>
+    <div class="thankyou-sub">For you</div>
+    <div class="message">
+      この度は当店をご利用いただきまして<br>
+      誠にありがとうございました。<br><br>
+      またのご利用を心よりお待ちしております
+    </div>
+  </div>
 </body>
 </html>
+
