--- a/exit.html
+++ b/exit.html
@@ -44,17 +44,22 @@
   </script>
 
   <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+    }
     body {
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
-      background-color: #f9f9f9;
+      background-color: #fff;
     }
     img {
-      max-width: 90%;
-      height: auto;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover; 
     }
   </style>
 </head>
