--- a/exit.html
+++ b/exit.html
@@ -58,9 +58,8 @@
       background-color: #fff;
     }
     img {
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover; 
+      max-width: 100%;
+      height: auto;
     }
   </style>
 </head>
