--- a/exit.html
+++ b/exit.html
@@ -48,6 +48,7 @@
     html, body {
       margin: 0;
       padding: 0;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
       height: 100%;
       width: 100%;
     }
