--- a/exit.html
+++ b/exit.html
@@ -56,6 +56,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      height: 300vh;
       background-color: #fff;
     }
     img {
