--- a/exit.html
+++ b/exit.html
@@ -54,14 +54,14 @@
     }
     body {
       display: flex;
-      justify-content: center;
-      align-items: center;
+      /*justify-content: center;
+      align-items: center;*/
       height: 300vh;
       background-color: #fff;
     }
     img {
       max-width: 100%;
-      height: 20vh;
+      height: auto;
     }
   </style>
 </head>
