--- a/exit.html
+++ b/exit.html
@@ -54,8 +54,8 @@
     }
     body {
       display: flex;
-      /*justify-content: center;
-      align-items: center;*/
+      justify-content: top;
+      align-items: top;
       height: 300vh;
       background-color: #fff;
     }
