--- a/exit.html
+++ b/exit.html
@@ -59,10 +59,19 @@
       height: 300vh;
       background-color: #fff;
     }
-    img {
-      max-width: 100%;
-      height: 100vh;
-    }
+      .image-container img {
+    width: 100%;
+    height: auto; /* 自動で高さを調整（縦横比を保つ） */
+    max-width: 600px; /* 必要に応じて最大幅を指定 */
+    display: block;
+  }
+
+  .text-section {
+    padding: 20px;
+    text-align: center;
+    font-size: 1.2rem;
+    color: #333;
+  }
   </style>
 </head>
 <body>
