--- a/exit.html
+++ b/exit.html
@@ -62,7 +62,7 @@
       .image-container img {
     width: 100%;
     height: auto; /* 自動で高さを調整（縦横比を保つ） */
-    max-width: 600px; /* 必要に応じて最大幅を指定 */
+    max-width: auto; /* 必要に応じて最大幅を指定 */
     display: block;
   }
 
