--- a/exit.html
+++ b/exit.html
@@ -54,24 +54,14 @@
     }
     body {
       display: flex;
-      justify-content: top;
-      align-items: top;
-      height: 300vh;
+      justify-content: center;
+      align-items: center;
       background-color: #fff;
     }
-      .image-container img {
-    width: 100%;
-    height: auto; /* 自動で高さを調整（縦横比を保つ） */
-    max-width: auto; /* 必要に応じて最大幅を指定 */
-    display: block;
-  }
-
-  .text-section {
-    padding: 20px;
-    text-align: center;
-    font-size: 1.2rem;
-    color: #333;
-  }
+    img {
+      max-width: 100%;
+      height: auto;
+    }
   </style>
 </head>
 <body>
