--- a/exit.html
+++ b/exit.html
@@ -49,13 +49,13 @@
       margin: 0;
       padding: 0;
       background: linear-gradient(to right, #a1c4fd, #c2e9fb);
-      height: 100%;
+      height: 300vh;
       width: 100%;
     }
     body {
       display: flex;
-      justify-content: center;
-      align-items: center;
+      justify-content: top;
+      align-items: top;
       background-color: #fff;
     }
     img {
