--- a/exit.html
+++ b/exit.html
@@ -55,22 +55,31 @@
 
   body {
     display: flex;
-    flex-direction: column;         /* 上から縦に並べる */
-    align-items: center;            /* 横方向中央寄せ */
+    flex-direction: column;
+    align-items: center;
     background-color: #fff;
   }
 
   .image-container {
-    margin-top: 40px;               /* 上に余白 */
+    margin-top: 40px;
+    width: 100%;
+    max-width: 600px;
+    padding: 0 10px; /* スマホ時に左右に余白 */
   }
 
   .image-container img {
     width: 100%;
-    max-width: 600px;
-    height: auto;                   /* 縦横比を保つ */
+    height: auto;
     display: block;
   }
 </style>
+
+<body>
+  <div class="image-container">
+    <img src="your-image.jpg" alt="説明画像">
+  </div>
+</body>
+
 </head>
 <body>
   <img src="exit.png" alt="退店画像">
