--- a/exit.html
+++ b/exit.html
@@ -44,35 +44,26 @@
     });
   </script>
 
-<style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    background: linear-gradient(to right, #a1c4fd, #c2e9fb);
-    height: 300vh;
-    width: 100%;
-  }
+ <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      height: 300vh;
+      width: 100%;
+    }
+    body {
+      display: flex;
+      justify-content: top;
+      align-items: top;
+      background-color: #fff;
+    }
+    img {
+      max-width: 100%;
+      max-height: 10%;
+    }
+  </style>
 
-  body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #fff;
-  }
-
-  .image-container {
-    margin-top: 40px;
-    width: 100%;
-    max-width: 600px;
-    padding: 0 10px; /* スマホ時に左右に余白 */
-  }
-
-  .image-container img {
-    width: 100%;
-    height: auto;
-    display: block;
-  }
-</style>
 
 <body>
   <div class="image-container">
