--- a/exit.html
+++ b/exit.html
@@ -49,7 +49,7 @@
       margin: 0;
       padding: 0;
       background: linear-gradient(to right, #a1c4fd, #c2e9fb);
-      height: 300vh;
+      height: 100%;
       width: 100%;
     }
     body {
