--- a/exit.html
+++ b/exit.html
@@ -54,8 +54,8 @@
     }
     body {
       display: flex;
-      justify-content: top;
-      align-items: top;
+      justify-content: center;
+      align-items: center;
       background-color: #fff;
     }
     img {
