--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
       const tableCounts = {
         "1": { enter: 0, exit: 0 },
         "2": { enter: 0, exit: 0 },
-        "3": { enter: 0, exit: 0 }
+        "3": { enter: 0, exit: 0 },
+        "4": { enter: 0, exit: 0 },
+        "5": { enter: 0, exit: 0 },
+      　"6": { enter: 0, exit: 0 },
+        "7": { enter: 0, exit: 0 },
+      　"8": { enter: 0, exit: 0 },
+        "9": { enter: 0, exit: 0 },
+        "10": { enter: 0, exit: 0 }
+      
       };
 
       snapshot.forEach(doc => {
@@ -79,5 +87,12 @@
   <p>テーブル1：<span id="table1-status">読み込み中...</span></p>
   <p>テーブル2：<span id="table2-status">読み込み中...</span></p>
   <p>テーブル3：<span id="table3-status">読み込み中...</span></p>
+  <p>テーブル4：<span id="table3-status">読み込み中...</span></p>
+  <p>テーブル5：<span id="table3-status">読み込み中...</span></p>
+  <p>テーブル6：<span id="table3-status">読み込み中...</span></p>
+  <p>テーブル7：<span id="table3-status">読み込み中...</span></p>
+  <p>テーブル8：<span id="table3-status">読み込み中...</span></p>
+  <p>テーブル9：<span id="table3-status">読み込み中...</span></p>
+  <p>テーブル10：<span id="table3-status">読み込み中...</span></p>
 </body>
 </html>
