--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 
     // 日付を YYYY-MM-DD HH:mm 形式に整形
     function formatTimestamp(isoString) {
+      if (!isoString || typeof isoString !== "string") return "ー";
       const date = new Date(isoString);
-      if (isNaN(date.getTime())) return "-";
+      if (isNaN(date.getTime()) || date.getFullYear() === 1970) return "ー";
       return `${date.getFullYear()}-${(date.getMonth() + 1).toString().padStart(2, "0")}-${date.getDate().toString().padStart(2, "0")} ${date.getHours().toString().padStart(2, "0")}:${date.getMinutes().toString().padStart(2, "0")}`;
-    }
+   }
+
 
     function updateTableStatus(currentCount, timestamp, elementId) {
       const status = currentCount > 0 ? "利用中" : "空席";
