--- a/enter.html
+++ b/enter.html
@@ -101,7 +101,11 @@
   </script>
 </head>
 <body>
-  <h1>ご来店ありがとうございます！</h1>
-  <p>入店が記録されました。</p>
+  <div class="container">
+    <div class="icon">🛍️</div>
+    <h1>ご来店ありがとうございます！</h1>
+    <p>入店が記録されました。</p>
+  </div>
+
 </body>
 </html>
