--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
 
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background-color: #2c3e50;
+      color: white;
+      padding: 10px 20px;
+    }
+    nav {
+      display: flex;
+      gap: 20px;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    #tables {
+      padding: 20px;
+    }
+  </style>
+
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
@@ -27,10 +55,25 @@
       return `${date.getFullYear()}-${(date.getMonth() + 1).toString().padStart(2, "0")}-${date.getDate().toString().padStart(2, "0")} ${date.getHours().toString().padStart(2, "0")}:${date.getMinutes().toString().padStart(2, "0")}`;
     }
 
+    function calculateElapsedTime(isoString) {
+      if (!isoString) return "";
+      const start = new Date(isoString);
+      const now = new Date();
+      const diffMs = now - start;
+      if (diffMs < 0) return "";
+
+      const minutes = Math.floor(diffMs / 60000);
+      const hours = Math.floor(minutes / 60);
+      const remainingMinutes = minutes % 60;
+
+      return hours > 0 ? `${hours}時間${remainingMinutes}分経過` : `${minutes}分経過`;
+    }
+
     function updateTableStatus(currentCount, timestamp, elementId) {
       const status = currentCount > 0 ? "利用中" : "空席";
       const timeText = formatTimestamp(timestamp);
-      document.getElementById(elementId).textContent = `${status}（${timeText}）`;
+      const elapsed = currentCount > 0 ? `｜${calculateElapsedTime(timestamp)}` : "";
+      document.getElementById(elementId).textContent = `${status}（${timeText}${elapsed}）`;
     }
 
     function countVisitors(snapshot) {
@@ -90,24 +133,37 @@
     };
   </script>
 </head>
-<body>
-  <h1>現在の混雑状況</h1>
-  <p>現在の入店者数: <span id="count">読み込み中...</span></p>
-  <p>累計入店数: <span id="entries">-</span></p>
-  <p>累計退店数: <span id="exits">-</span></p>
 
-  <h2>テーブル別 使用状況（時刻）</h2>
-  <div id="tables">
-    <p>テーブル1：<span id="table1-status">読み込み中...</span></p>
-    <p>テーブル2：<span id="table2-status">読み込み中...</span></p>
-    <p>テーブル3：<span id="table3-status">読み込み中...</span></p>
-    <p>テーブル4：<span id="table4-status">読み込み中...</span></p>
-    <p>テーブル5：<span id="table5-status">読み込み中...</span></p>
-    <p>テーブル6：<span id="table6-status">読み込み中...</span></p>
-    <p>テーブル7：<span id="table7-status">読み込み中...</span></p>
-    <p>テーブル8：<span id="table8-status">読み込み中...</span></p>
-    <p>テーブル9：<span id="table9-status">読み込み中...</span></p>
-    <p>テーブル10：<span id="table10-status">読み込み中...</span></p>
-  </div>
+<body>
+  <header>
+    <h1>店内管理システム</h1>
+    <nav>
+      <a href="#">ホーム</a>
+      <a href="#">店内マップ</a>
+      <a href="#">ログ一覧</a>
+    </nav>
+  </header>
+
+  <main>
+    <section style="padding: 20px;">
+      <p>現在の入店者数: <span id="count">読み込み中...</span></p>
+      <p>累計入店数: <span id="entries">-</span></p>
+      <p>累計退店数: <span id="exits">-</span></p>
+    </section>
+
+    <section id="tables">
+      <h2>テーブル別 使用状況（時刻）</h2>
+      <p>テーブル1：<span id="table1-status">読み込み中...</span></p>
+      <p>テーブル2：<span id="table2-status">読み込み中...</span></p>
+      <p>テーブル3：<span id="table3-status">読み込み中...</span></p>
+      <p>テーブル4：<span id="table4-status">読み込み中...</span></p>
+      <p>テーブル5：<span id="table5-status">読み込み中...</span></p>
+      <p>テーブル6：<span id="table6-status">読み込み中...</span></p>
+      <p>テーブル7：<span id="table7-status">読み込み中...</span></p>
+      <p>テーブル8：<span id="table8-status">読み込み中...</span></p>
+      <p>テーブル9：<span id="table9-status">読み込み中...</span></p>
+      <p>テーブル10：<span id="table10-status">読み込み中...</span></p>
+    </section>
+  </main>
 </body>
 </html>
